add rules button and rules content

--- a/index.html
+++ b/index.html
@@ -3,11 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Font Awesome And Google Fonts -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Document</title>
 </head>
 <body>
+    <!-- Title -->
+    <h1 class="heading">Rock, Paper, Scissors, Lizard, Spock!</h1>
+    <!-- Rules Button -->
+    <button class="rulesBtn">Rules</button>
+    <!-- Rules Content -->
+    <div class="rules-content">
+        <span class="close">&times;</span>
+        <p>The game is an expansion on the game Rock, Paper, Scissors. Each player picks a variable and reveals it at the same time. The winner is the one who defeats the others. In a tie, the process is repeated until a winner is found.
+
+
+Scissors cuts Paper
+Paper covers Rock
+Rock crushes Lizard
+Lizard poisons Spock
+Spock smashes Scissors
+Scissors decapitates Lizard
+Lizard eats Paper
+Paper disproves Spock
+Spock vaporizes Rock
+(and as it always has) Rock crushes Scissors
+</p>
+    </div>
+
     
+
+    <div>Games Area</div>
+
+    <div>Score Area</div>
 
     <script src="assets/js/script.js"></script>
 </body>
