--- a/index.html
+++ b/index.html
@@ -24,12 +24,32 @@
         <p>here are the rules</p>
       </div>
     </div>
+    <!-- Moves Remaining section-->
+    <div class="movesleft">Moves left: 10</div>
 
   
+    <!-- Games Area -->
+    <div class="move">Choose Your Move</div>
+    <div class="chocies">
+      <button class="rock">Rock</button>
+      <button class="paper">Paper</button>
+      <button class="scissors">Scissors</button>
+      <button class="lizard">Lizard</button>
+      <button class="spock">Spock</button>
+    </div>
 
-    <div>Games Area</div>
+   <!-- Score Area -->
+    <div class="score">
+      <div class="playerScore">
+        <h2>Player</h2>
+        <p class="p-count count">0</p>
+      </div>
+      <div class="playerScore">
+        <h2>Computer</h2>
+        <p class="c-count count">0</p>
+      </div>
+    </div>
 
-    <div>Score Area</div>
 
     <script src="assets/js/script.js"></script>
 </body>
