add restart button and final score div to html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Title -->
     <h1 class="heading">Rock, Paper, Scissors, Lizard, Spock!</h1>
 
-    <!-- Button -->
+    <!-- Rules Button -->
     <button id="rulesBtn">Rules</button>
     <!-- The Modal -->
     <div id="rulesModal" class="modal">
@@ -24,8 +24,15 @@
         <p>here are the rules</p>
       </div>
     </div>
+    
     <!-- Moves Remaining section-->
     <div class="movesleft">Moves left: 10</div>
+    
+    <!-- Restart button-->
+    <div class="restart">
+      <button class="restartBtn">Restart</button>
+    </div>
+
 
   
     <!-- Games Area -->
@@ -49,6 +56,10 @@
         <p class="c-count count">0</p>
       </div>
     </div>
+
+
+    <!-- Result -->
+    <div class="result"></div>
 
 
     <script src="assets/js/script.js"></script>
