add basic game style to the whole page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <title>Document</title>
 </head>
 <body>
+  <section class="game">
     <!-- Title -->
+  
     <h1 class="heading">Rock, Paper, Scissors, Lizard, Spock!</h1>
 
     <!-- Rules Button -->
@@ -30,7 +32,7 @@
     
     <!-- Restart button-->
     <div class="restart">
-      <button class="restartBtn">Restart</button>
+      <button class="restartBtn">Restart </button>
     </div>
 
 
@@ -60,8 +62,8 @@
 
     <!-- Result -->
     <div class="result"></div>
-
-
+  </section>
+    
     <script src="assets/js/script.js"></script>
 </body>
 </html>
