made restart button bigger

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     </div>
     <br>
     <!-- Moves Remaining section-->
-    <div class="movesleft">Moves left: 10</div>
+    <div class="movesleft">
+      <h1>Moves Left: 10</h1>
+    </div>
     <br>
     <!-- Restart button-->
     <div class="restart">
@@ -39,7 +41,9 @@
 
   
     <!-- Games Area -->
-    <div class="move">Choose Your Move</div>
+    <div class="move">
+      <h1>Choose Your Move</h1>
+    </div>
     <br>
     <div class="chocies">
       <button class="rock">Rock</button>
