styled buttons with size and colour

--- a/index.html
+++ b/index.html
@@ -45,14 +45,13 @@
       <h1>Choose Your Move</h1>
     </div>
     <br>
-    <div class="chocies">
+    <div class="choices">
       <button class="rock">Rock</button>
       <button class="paper">Paper</button>
       <button class="scissors">Scissors</button>
       <button class="lizard">Lizard</button>
       <button class="spock">Spock</button>
     </div>
-
    <!-- Score Area -->
     <div class="score">
       <div class="playerScore">
