--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
     </div>
     <br>
     <div class="choices">
-      <button class="rock">Rock</button>
-      <button class="paper">Paper</button>
-      <button class="scissors">Scissors</button>
-      <button class="lizard">Lizard</button>
-      <button class="spock">Spock</button>
+      <button class="rock">Rock<i class="fa-regular fa-hand-back-fist"></i></button>
+      <button class="paper">Paper<i class="fa-regular fa-hand"></i></button>
+      <button class="scissors">Scissors<i class="fa-regular fa-hand-scissors"></i></button>
+      <button class="lizard">Lizard<i class="fa-regular fa-hand-lizard"></i></button>
+      <button class="spock">Spock<i class="fa-regular fa-hand-spock"></i></button>
     </div>
    <!-- Score Area -->
     <div class="score">
@@ -70,5 +70,7 @@
   </section>
     
     <script src="assets/js/script.js"></script>
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/4c35b72cdf.js" crossorigin="anonymous"></script>
 </body>
 </html>
