changed restart button javascript to make it work

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <br>
     <!-- Restart button-->
     <div class="restart">
-      <button class="restartBtn">Restart </button>
+      <button id="restartBtn">Restart</button>
     </div>
     <br>
 
