added the rules in the modal

--- a/index.html
+++ b/index.html
@@ -23,7 +23,18 @@
       <!-- Modal content -->
       <div class="modal-content">
         <span class="close">&times;</span>
-        <p>here are the rules</p>
+        <p>The game is an expansion on the game Rock, Paper, Scissors, with the additional hand signs of Lizard (resembling a hand puppet), and Spock (the Vulcan Salute). Each player picks a variable and reveals it at the same time. The winner is the one who defeats the others. In a tie, the process is repeated until a winner is found.<br>
+          <br>
+          Scissors cuts Paper<br>
+          Paper covers Rock<br>
+          Rock crushes Lizard<br>
+          Lizard poisons Spock<br>
+          Spock smashes Scissors<br>
+          Scissors decapitates Lizard<br>
+          Lizard eats Paper<br>
+          Paper disproves Spock<br>
+          Spock vaporizes Rock<br>
+          (and as it always has) Rock crushes Scissors</p>
       </div>
     </div>
     <br>
