changed the modal overlay to be darkened, made the cursor point over buttons and improved the button padding and border radius

--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Fun Rock, Paper, Scissors Game">
-    <meta name="keywords" content="rock, paper, scissors, game, fun">
 
-    <!-- Font Awesome And Google Fonts -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <title>Rock, Paper, Scissors, Lizard, Spock!</title>
-    <link rel="icon" href="/assets/images/icons8-puzzle-48.png">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Fun Rock, Paper, Scissors Game">
+  <meta name="keywords" content="rock, paper, scissors, game, fun">
+
+  <!-- Font Awesome And Google Fonts -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+    integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <title>Rock, Paper, Scissors, Lizard, Spock!</title>
+  <link rel="icon" href="/assets/images/icons8-puzzle-48.png">
 </head>
+
 <body>
   <section class="game">
     <!-- Title -->
-  
+
     <h1 class="heading">Rock, Paper, Scissors, Lizard, Spock!</h1>
 
     <!-- Rules Button -->
@@ -24,9 +27,13 @@
     <!-- The Modal -->
     <div id="rulesModal" class="modal">
       <!-- Modal content -->
+
       <div class="modal-content">
         <span class="close">&times;</span>
-        <p>The game is an expansion on the game Rock, Paper, Scissors, with the additional hand signs of Lizard (resembling a hand puppet), and Spock (the Vulcan Salute). Each player picks a variable and reveals it at the same time. The winner is the one who defeats the others. In a tie, the process is repeated until a winner is found.<br>
+        <p>The game is an expansion on the game Rock, Paper, Scissors, with the additional hand signs of Lizard
+          (resembling a hand puppet), and Spock (the Vulcan Salute). Each player picks a variable and reveals it at the
+          same time. The winner is the one who defeats the others. In a tie, the process is repeated until a winner is
+          found.<br>
           <br>
           Scissors cuts Paper<br>
           Paper covers Rock<br>
@@ -37,7 +44,8 @@
           Lizard eats Paper<br>
           Paper disproves Spock<br>
           Spock vaporizes Rock<br>
-          (and as it always has) Rock crushes Scissors</p>
+          (and as it always has) Rock crushes Scissors
+        </p>
       </div>
     </div>
     <br>
@@ -53,7 +61,7 @@
     <br>
 
 
-  
+
     <!-- Games Area -->
     <div class="move">
       <h1>Choose Your Move</h1>
@@ -66,7 +74,7 @@
       <button class="lizard">Lizard<i class="fa-regular fa-hand-lizard"></i></button>
       <button class="spock">Spock<i class="fa-regular fa-hand-spock"></i></button>
     </div>
-   <!-- Score Area -->
+    <!-- Score Area -->
     <div class="score">
       <div class="playerScore">
         <h2>Player</h2>
@@ -82,9 +90,10 @@
     <!-- Result -->
     <div class="result"></div>
   </section>
-    
-    <script src="assets/js/script.js"></script>
-    <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/4c35b72cdf.js" crossorigin="anonymous"></script>
+
+  <script src="assets/js/script.js"></script>
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/4c35b72cdf.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
