made a function to hide the rules button once the game has started

--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
     </div>
     <br>
     <div class="choices">
-      <button class="rock">Rock<i class="fa-regular fa-hand-back-fist"></i></button>
-      <button class="paper">Paper<i class="fa-regular fa-hand"></i></button>
-      <button class="scissors">Scissors<i class="fa-regular fa-hand-scissors"></i></button>
-      <button class="lizard">Lizard<i class="fa-regular fa-hand-lizard"></i></button>
-      <button class="spock">Spock<i class="fa-regular fa-hand-spock"></i></button>
+      <button onclick="myFunction()" class="rock">Rock<i class="fa-regular fa-hand-back-fist"></i></button>
+      <button onclick="myFunction()" class="paper">Paper<i class="fa-regular fa-hand"></i></button>
+      <button onclick="myFunction()" class="scissors">Scissors<i class="fa-regular fa-hand-scissors"></i></button>
+      <button onclick="myFunction()" class="lizard">Lizard<i class="fa-regular fa-hand-lizard"></i></button>
+      <button onclick="myFunction()" class="spock">Spock<i class="fa-regular fa-hand-spock"></i></button>
     </div>
     <!-- Score Area -->
     <div class="score">
