ensured the rules button is always visable

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <!-- Moves Remaining section-->
     <div class="movesleft">
-      <h1>Moves Left: 10</h1>
+      <p>Moves Left: 10</p>
     </div>
     <br>
 
