ensured font size is consistant

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <!-- Games Area -->
     <div class="move">
-      <h1>Choose Your Move</h1>
+      <p>Choose Your Move</p>
     </div>
     <br>
     <div class="choices">
